--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: kyber_mod_manager
 description: Kyber Mod Manager
 publish_to: 'none'
-version: 1.0.2
+version: 1.0.3
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -11,9 +11,10 @@ dependencies:
   dio: ^4.0.0
   uuid: ^3.0.5
   process_run: ^0.12.3+2
-  sentry_flutter: ^6.3.0
+  sentry_flutter: ^6.4.0
   dart_discord_rpc: ^0.0.2
   windows_taskbar: ^1.1.0
+  flutter_fadein: ^2.0.0
   url_launcher: ^6.0.0
   package_info_plus: 1.3.0
   bot_toast: ^4.0.1
