--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   windows_taskbar: ^1.1.0
   flutter_fadein: ^2.0.0
   url_launcher: ^6.0.0
+  intl: ^0.17.0
   package_info_plus: 1.3.0
   bot_toast: ^4.0.1
   auto_update: ^0.0.4
