--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   hive: ^2.0.6
   hive_flutter:
   json_annotation:
+  flutter_acrylic: ^1.0.0+2
   puppeteer: ^2.7.0
   win32: ^2.4.1
   ffi: ^1.1.2
