--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   url_launcher: ^6.0.0
   intl: ^0.17.0
   package_info_plus: 1.3.0
+  system_info2: ^2.0.3
   bot_toast: ^4.0.1
   auto_update: ^0.0.4
   flutter_markdown: ^0.6.9+1
