--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   sentry_flutter: ^6.4.0
   dart_discord_rpc: ^0.0.2
   window_manager: ^0.2.1
+  drag_and_drop_windows: ^0.0.2
   windows_taskbar: ^1.1.0
   flutter_fadein: ^2.0.0
   url_launcher: ^6.0.0
