--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_fadein: ^2.0.0
   url_launcher: ^6.0.0
   intl: ^0.17.0
-  package_info_plus: 1.3.0
+  package_info_plus: ^1.4.2
   system_info2: ^2.0.3
   bot_toast: ^4.0.1
   auto_update: ^0.0.4
