add system tray

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   archive: ^3.2.1
   auto_size_text: ^3.0.0
   fluent_ui: ^3.9.1
+  system_tray: ^0.1.0
   tinycolor2: ^2.0.0
   http: ^0.13.4
   system_theme: ^2.0.0
@@ -62,5 +63,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/app_icon.ico
     - assets/flags/
     - assets/i18n/
