--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_fadein: ^2.0.0
   url_launcher: ^6.0.0
   intl: ^0.17.0
+  dio_cache_interceptor: ^3.2.7
   package_info_plus: ^1.4.2
   system_info2: ^2.0.3
   bot_toast: ^4.0.1
@@ -31,7 +32,7 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.9
   desktop_drop: ^0.3.3
-  flutter_translate: ^3.0.1
+  flutter_translate: ^4.0.2
   archive: ^3.2.1
   auto_size_text: ^3.0.0
   fluent_ui: ^3.9.1
