--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,12 @@ dependencies:
   dio_cache_interceptor_hive_store: ^3.1.1
   package_info_plus: ^1.4.2
   system_info2: ^2.0.3
-  bot_toast: ^4.0.1
+  bot_toast:
+    git:
+      url: https://github.com/MMMzq/bot_toast.git
   auto_update: ^0.0.4
   flutter_markdown: ^0.6.9+1
-  win32_registry: ^0.1.2
+  win32_registry: ^1.0.0
   logging: ^1.0.2
   version: ^2.0.0
   file_picker: ^4.3.3
@@ -33,10 +35,15 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.9
   desktop_drop: ^0.3.3
-  flutter_translate: ^4.0.2
+  flutter_translate:
+    git:
+      url: https://github.com/Jesway/Flutter-Translate.git
   archive: ^3.2.1
   auto_size_text: ^3.0.0
-  fluent_ui: ^3.9.1
+  #fluent_ui: ^3.9.1
+  fluent_ui:
+    git:
+      url: https://github.com/paulwang001/fluent_ui.git
   system_tray: ^0.1.0
   tinycolor2: ^2.0.0
   http: ^0.13.4
@@ -60,7 +67,7 @@ dev_dependencies:
   build_runner:
   freezed:
   json_serializable:
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 flutter:
   uses-material-design: true
