--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   windows_taskbar: ^1.1.0
   flutter_fadein: ^2.0.0
   url_launcher: ^6.0.0
+  html: ^0.15.0
   intl: ^0.17.0
   dio_cache_interceptor: ^3.2.7
   dio_cache_interceptor_hive_store: ^3.1.1
@@ -41,9 +42,7 @@ dependencies:
   archive: ^3.2.1
   auto_size_text: ^3.0.0
   #fluent_ui: ^3.9.1
-  fluent_ui:
-    git:
-      url: https://github.com/paulwang001/fluent_ui.git
+  fluent_ui: any
   system_tray: ^0.1.0
   tinycolor2: ^2.0.0
   http: ^0.13.4
