--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   url_launcher: ^6.0.0
   html: ^0.15.0
   intl: ^0.17.0
+  flutter_platform_alert: ^0.2.6
   dio_cache_interceptor: ^3.2.7
   dio_cache_interceptor_hive_store: ^3.1.1
   package_info_plus: ^1.4.2
