--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: kyber_mod_manager
 description: Kyber Mod Manager
 publish_to: 'none'
-version: 1.0.6
+version: 1.0.7
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -12,6 +12,7 @@ dependencies:
   uuid: ^3.0.5
   process_run: ^0.12.3+2
   sentry_flutter: ^6.4.0
+  crypto: ^3.0.2
   dart_discord_rpc: ^0.0.2
   window_manager: ^0.2.1
   windows_taskbar: ^1.1.0
