--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,10 @@ dependencies:
       url: https://github.com/Jesway/Flutter-Translate.git
   archive: ^3.2.1
   auto_size_text: ^3.0.0
-  #fluent_ui: ^3.9.1
-  fluent_ui:
-    git:
-      url: https://github.com/bdlukaa/fluent_ui.git
+  fluent_ui: ^3.12.0
+  # fluent_ui:
+    # git:
+    #  url: https://github.com/bdlukaa/fluent_ui.git
   system_tray: ^0.1.0
   tinycolor2: ^2.0.0
   http: ^0.13.4
