--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,33 +7,34 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
-  flutter_svg: ^1.0.3
+  flutter_svg: 1.0.3
   dio: ^4.0.0
   uuid: ^3.0.5
   process_run: ^0.12.3+2
-  sentry_flutter: ^6.4.0
+  sentry_flutter: ^6.7.0
   crypto: ^3.0.2
-  dart_discord_rpc: ^0.0.2
   window_manager: ^0.2.1
   windows_taskbar: ^1.1.0
   flutter_fadein: ^2.0.0
-  url_launcher: ^6.0.0
+  url_launcher: ^6.1.5
   html: ^0.15.0
   intl: ^0.17.0
-  flutter_platform_alert: ^0.2.6
+  flutter_platform_alert: ^0.3.0
   dio_cache_interceptor: ^3.2.7
   dio_cache_interceptor_hive_store: ^3.1.1
-  package_info_plus: ^1.4.2
+  package_info_plus: ^1.4.3
   system_info2: ^2.0.3
   bot_toast:
     git:
       url: https://github.com/MMMzq/bot_toast.git
   auto_update: ^0.0.4
-  flutter_markdown: ^0.6.9+1
-  win32_registry: ^1.0.0
+  flutter_markdown: ^0.6.10+3
+  win32_registry:
+    git:
+      url: https://github.com/Zekfad/win32_registry.git
   logging: ^1.0.2
   version: ^3.0.0
-  file_picker: ^4.3.3
+  file_picker: ^5.0.0
   flutter_bloc: ^8.0.1
   path: ^1.8.1
   path_provider: ^2.0.9
@@ -41,13 +42,13 @@ dependencies:
   flutter_translate:
     git:
       url: https://github.com/Jesway/Flutter-Translate.git
-  archive: ^3.2.1
+  archive: ^3.3.1
   auto_size_text: ^3.0.0
   fluent_ui: ^3.12.0
     #fluent_ui:
   #git:
   #url: https://github.com/bdlukaa/fluent_ui.git
-  system_tray: ^0.1.0
+  system_tray: ^2.0.1
   tinycolor2: ^2.0.0
   http: ^0.13.4
   system_theme: ^2.0.0
@@ -55,11 +56,11 @@ dependencies:
   hive_flutter:
   json_annotation:
   flutter_acrylic: ^1.0.0+2
-  puppeteer: 2.7.0
+  puppeteer: ^2.12.0
   jiffy: ^5.0.0
   win32: ^2.4.1
   quiver: ^3.1.0
-  ffi: ^1.1.2
+  ffi: ^1.0.0
   webview_windows:
     path: ../../Other stuff/flutter-webview-windows-updated
   flutter:
@@ -67,8 +68,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   freezed_annotation:
-  syncfusion_flutter_charts: ^20.1.61
+  syncfusion_flutter_charts: ^20.2.39
   influxdb_client: ^2.5.0
+  dart_discord_rpc: ^0.0.2
+
+dependency_overrides: 
+  ffi: ^2.0.0
 
 dev_dependencies:
   hive_generator: ^1.1.2
