--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   dio_cache_interceptor_hive_store: ^3.1.1
   package_info_plus: ^1.4.3
   system_info2: ^2.0.3
+  dynamic_env:
+    path: 'packages/dynamic_env'
   bot_toast:
     git:
       url: https://github.com/MMMzq/bot_toast.git
@@ -45,7 +47,7 @@ dependencies:
   archive: ^3.3.1
   auto_size_text: ^3.0.0
   fluent_ui: ^3.12.0
-    #fluent_ui:
+  #fluent_ui:
   #git:
   #url: https://github.com/bdlukaa/fluent_ui.git
   system_tray: ^2.0.1
@@ -72,7 +74,7 @@ dependencies:
   influxdb_client: ^2.5.0
   dart_discord_rpc: ^0.0.2
 
-dependency_overrides: 
+dependency_overrides:
   ffi: ^2.0.0
 
 dev_dependencies:
