--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,6 @@ dependencies:
   archive: ^3.3.1
   auto_size_text: ^3.0.0
   fluent_ui: ^3.12.0
-  #fluent_ui:
-  #git:
-  #url: https://github.com/bdlukaa/fluent_ui.git
   system_tray: ^2.0.1
   tinycolor2: ^2.0.0
   http: ^0.13.4
@@ -64,7 +61,7 @@ dependencies:
   quiver: ^3.1.0
   ffi: ^1.0.0
   webview_windows:
-    path: ../../Other stuff/flutter-webview-windows-updated
+    path: packages/flutter-webview-windows-updated
   flutter:
     sdk: flutter
   flutter_localizations:
