--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,8 @@ dependencies:
   quiver: ^3.1.0
   ffi: ^1.0.0
   webview_windows:
-    path: packages/flutter-webview-windows-updated
+    git:
+      url: https://github.com/7reax/flutter-webview-windows
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -71,6 +72,7 @@ dependencies:
       url: https://github.com/alexmercerind/dart_discord_rpc.git
       ref: harmonoid
   protocol_handler: ^0.1.4
+
 dependency_overrides:
   win32_registry:
     git:
