--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
     git:
       url: https://github.com/alexmercerind/dart_discord_rpc.git
       ref: harmonoid
+  linkable: ^3.0.1
 
 dependency_overrides:
   win32_registry:
