--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 1.0.10
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
   flutter:
@@ -73,6 +73,7 @@ dependencies:
       url: https://github.com/alexmercerind/dart_discord_rpc.git
       ref: harmonoid
   linkable: ^3.0.1
+  go_router: ^8.0.5
 
 dependency_overrides:
   win32_registry:
