--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   flutter_markdown: ^0.6.10+3
   logging: ^1.0.2
   version: ^3.0.0
-  file_picker: ^5.0.0
   flutter_bloc: ^8.0.1
   path: ^1.8.1
   path_provider: ^2.0.9
@@ -74,6 +73,7 @@ dependencies:
       ref: harmonoid
   linkable: ^3.0.1
   go_router: ^8.0.5
+  file_selector: ^1.0.0
 
 dependency_overrides:
   win32_registry:
