--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   linkable: ^3.0.1
   go_router: ^8.0.5
   file_selector: ^1.0.0
+  async: ^2.11.0
 
 dependency_overrides:
   win32_registry:
